courses css expansion table

--- a/frontend/src/app/pages/backoffice/course/courses/courses.html
+++ b/frontend/src/app/pages/backoffice/course/courses/courses.html
@@ -86,7 +86,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let c of paginated()">
-          <td>{{ c.title }}</td>
+          <td class="title-cell">{{ c.title }}</td>
           <td class="description-cell">{{ c.description }}</td>
           <td>
             <span class="badge bg-secondary-subtle text-secondary border">
