forgot-password-page almost finished

--- a/frontend/src/app/pages/frontoffice/login/login.html
+++ b/frontend/src/app/pages/frontoffice/login/login.html
@@ -38,11 +38,11 @@
 
 
 
-      <a href="" class="mt-1 ml-[75px] text-xs text-black font-poppins hover:underline">
+      <a routerLink="/forgot-password" class="mt-1 ml-[75px] text-xs text-black font-poppins hover:underline">
         Esqueceu a sua senha?
       </a>
 
-      <a href="" class="mt-1 ml-[112px] text-xs text-redIsla font-poppins hover:underline">
+      <a routerLink="/register" class="mt-1 ml-[112px] text-xs text-redIsla font-poppins hover:underline">
         Registe-se
       </a>
 
