forgot-password-page almost finished 2.0

--- a/frontend/src/app/pages/frontoffice/course/course.html
+++ b/frontend/src/app/pages/frontoffice/course/course.html
@@ -11,7 +11,7 @@
       <h1 class="text-3xl sm:text-4xl md:text-4xl font-poppins text-black">
         {{ course?.name }}
       </h1>
-      <span class="text-base text-black mt-1">Início {{course?.date}}</span>
+      <span class="text-base text-black mt-1">Início: {{course?.date}}</span>
     </div>
 
     <div class="flex flex-row flex-wrap gap-4 text-lg font-poppins text-black text-right ml-auto">
