--- a/frontend/src/app/pages/frontoffice/register/register.html
+++ b/frontend/src/app/pages/frontoffice/register/register.html
@@ -50,7 +50,7 @@
 
         <p class="mt-1 ml-[55px] text-xs text-black font-poppins">
           Já tem uma conta?
-          <a href="" class="text-redIsla relative inline-block hover:underline">Entre Aqui</a>
+          <a routerLink="/login" class="text-redIsla relative inline-block hover:underline">Entre Aqui</a>
         </p>
 
     </div>
