--- a/frontend/src/app/pages/frontoffice/forgot-password/forgot-password.html
+++ b/frontend/src/app/pages/frontoffice/forgot-password/forgot-password.html
@@ -24,7 +24,7 @@
 
 
         <button type="submit" class="mt-2 px-4 py-2 w-full bg-redIsla text-white font-poppins">
-          Redifinir Senha
+          Redefinir Senha
         </button>
       </form>
 
