--- a/frontend/src/app/pages/backoffice/quiz/quizzes/quizzes.html
+++ b/frontend/src/app/pages/backoffice/quiz/quizzes/quizzes.html
@@ -20,6 +20,18 @@
                  (ngModelChange)="q.set($event); resetPage()">
         </div>
 
+        <div class="col-12 col-md-2">
+          <label class="form-label">Status</label>
+          <select class="form-select"
+                  [ngModel]="status()"
+                  (ngModelChange)="status.set($event); resetPage()">
+            <option value="">Todos</option>
+            <option>Ativo</option>
+            <option>Inativo</option>
+          </select>
+        </div>
+
+
         <div class="col-12 col-md-2 d-flex">
           <button class="btn btn-outline-secondary w-100" (click)="resetFilters()">
             Limpar
@@ -52,6 +64,7 @@
           <th class="d-none d-md-table-cell">Descrição</th>
           <th>Curso</th>
           <th>Vídeo</th>
+          <th>Status</th>
           <th class="text-end">Criado em</th>
           <th class="text-end">Ações</th>
         </tr>
@@ -88,6 +101,10 @@
             <ng-template #noVideo>
               <span class="text-muted small">Sem vídeo</span>
             </ng-template>
+          </td>
+
+          <td>
+            <span class="badge" [ngClass]="badgeClass(qz.status)">{{ qz.status }}</span>
           </td>
 
           <td class="text-end">
