--- a/frontend/src/app/components/frontoffice/header/header.html
+++ b/frontend/src/app/components/frontoffice/header/header.html
@@ -10,7 +10,7 @@
       </a>
       <a routerLink="/about" class="px-3 py-2 sm:px-5 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition text-center">Saiba Mais</a>
       <a routerLink="/mission" class="px-3 py-2 sm:px-5 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition text-center">Missões</a>
-      <a routerLink="/course" class="px-3 py-2 sm:px-5 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition text-center">Cursos Online</a>
+      <a routerLink="/courses" class="px-3 py-2 sm:px-5 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition text-center">Cursos</a>
       <a routerLink="/community" class="px-3 py-2 sm:px-5 sm:py-2 sm:text-base rounded bg-white/20 hover:bg-white/30 transition text-center">Comunidade</a>
     </div>
 
