--- a/frontend/src/app/pages/frontoffice/courses-list/courses-list.html
+++ b/frontend/src/app/pages/frontoffice/courses-list/courses-list.html
@@ -42,6 +42,21 @@
                     <option *ngFor="let mod of modalities" [value]="mod">{{ mod }}</option>
                 </select>
             </div>
+
+            <div class="flex flex-col w-1/2">
+                <label for="area" class="mb-1 font-poppins text-gray-700 text-left">
+                    Filtrar por área:
+                </label>
+
+                <select id="area" [(ngModel)]="selectedArea" (change)="filterCourses()"
+                    class="px-4 py-2 border border-gray-300 focus:outline-none focus:ring-2 focus:ring-redIsla">
+                    <option value="">Todas as áreas</option>
+                    <option *ngFor="let area of areas" [value]="area">
+                        {{ area }}
+                    </option>
+                </select>
+            </div>
+
         </div>
 
 
