new user gender birthdate columns

--- a/frontend/src/app/pages/backoffice/user/user-create/user-create.html
+++ b/frontend/src/app/pages/backoffice/user/user-create/user-create.html
@@ -77,6 +77,22 @@
                 </select>
             </div>
 
+            <div class="col-6 col-lg-3">
+                <label class="form-label">Gênero</label>
+                <select class="form-select" formControlName="gender">
+                    <option value="">—</option>
+                    <option value="male">Masculino</option>
+                    <option value="female">Feminino</option>
+                    <option value="other">Outro</option>
+                </select>
+                </div>
+
+                <div class="col-6 col-lg-3">
+                <label class="form-label">Nascimento</label>
+                <input type="date" class="form-control" formControlName="birthdate">
+            </div>
+
+
 
             <div class="col-12 col-lg-6">
             <label class="form-label">Senha</label>
