--- a/frontend/src/app/pages/backoffice/user/user-edit/user-edit.html
+++ b/frontend/src/app/pages/backoffice/user/user-edit/user-edit.html
@@ -79,6 +79,25 @@
               </select>
             </div>
 
+            <div class="col-6 col-lg-3">
+              <label class="form-label">Gênero</label>
+              <select class="form-select" formControlName="gender">
+                <option value="">—</option>
+                <option value="male">Masculino</option>
+                <option value="female">Feminino</option>
+                <option value="other">Outro</option>
+              </select>
+            </div>
+
+            <div class="col-6 col-lg-3">
+              <label class="form-label">Nascimento</label>
+              <input
+                type="date"
+                class="form-control"
+                formControlName="birthdate"
+              >
+            </div>
+
             <div class="col-12 col-lg-6">
               <label class="form-label">Nova senha (opcional)</label>
               <input type="password" class="form-control" formControlName="password" placeholder="Mín. 6 caracteres">
