--- a/frontend/src/app/pages/frontoffice/perfil/perfil.html
+++ b/frontend/src/app/pages/frontoffice/perfil/perfil.html
@@ -74,21 +74,24 @@
       <h3 class="text-2xl font-semibold mb-6">Informação Pessoal</h3>
 
       <form [formGroup]="form" novalidate>
-       
-        <div class="mb-6 flex gap-4">
-          <label class="inline-flex items-center cursor-pointer">
-            <input type="radio" formControlName="gender" value="Masculino" class="form-radio text-red-700">
-            <span class="ml-2">Masculino</span>
-          </label>
-          <label class="inline-flex items-center cursor-pointer">
-            <input type="radio" formControlName="gender" value="Feminino" class="form-radio text-red-700">
-            <span class="ml-2">Feminino</span>
-          </label>
-          <label class="inline-flex items-center cursor-pointer">
-            <input type="radio" formControlName="gender" value="Outro" class="form-radio text-red-700">
-            <span class="ml-2">Outro</span>
-          </label>
-        </div>
+            
+      <div class="mb-6 flex gap-4">
+        <label class="inline-flex items-center cursor-pointer">
+          <input type="radio" formControlName="gender" value="male" class="form-radio text-red-700">
+          <span class="ml-2">Masculino</span>
+        </label>
+
+        <label class="inline-flex items-center cursor-pointer">
+          <input type="radio" formControlName="gender" value="female" class="form-radio text-red-700">
+          <span class="ml-2">Feminino</span>
+        </label>
+
+        <label class="inline-flex items-center cursor-pointer">
+          <input type="radio" formControlName="gender" value="other" class="form-radio text-red-700">
+          <span class="ml-2">Outro</span>
+        </label>
+      </div>
+
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
           
@@ -122,8 +125,8 @@
             <input
               type="date"
               class="w-full border px-3 py-2  focus:outline-none focus:ring-2 focus:ring-red-700"
-              formControlName="birthDate"
-            >
+              formControlName="birthdate"
+            />
           </div>
 
       
